[package]
name = "searchsort"
version = "0.1.0"
edition = "2021"
description = "A Rust trait implementing Binary Search and Quick Sort algorithms."
homepage = "https://github.com/manorajesh/searchsort"
repository = "https://github.com/manorajesh/searchsort.git"
readme = "README.md"
license = "MIT"
keywords = ["search", "sort", "binary-search", "quick-sort"]
categories = ["algorithms", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
lto = "fat"
codegen-units = 1
debug = 0

[features]
nightly = []